--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My-food-blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
 
+    <section class="top-banner">
+
+        <div>
+            <h1><span class="pink-color">Healthy Food</span> for Kids</h1>
+            <p>Are your kids hooked on junk food?<br> With these simple tips, you can get children to eat right without
+                turning
+                mealtimes into a battle zone.</p>
+            <a link button target="_blank" href="">Order Food</a>
+        </div>
+
+        <div>
+            <img src="1.png" alt="">
+        </div>
+
+    </section>
 </body>
 
 </html>
