--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="top-banner">
 
-        <div>
+        <div class="haif-width">
             <h1><span class="pink-color">Healthy Food</span> for Kids</h1>
             <p>Are your kids hooked on junk food?<br> With these simple tips, you can get children to eat right without
                 turning
@@ -25,11 +25,124 @@
             <a link button target="_blank" href="">Order Food</a>
         </div>
 
-        <div>
+        <div class="haif-width">
             <img src="1.png" alt="">
         </div>
 
     </section>
+
+    <section class="About-Me">
+        <div class="haif-width">
+            <img src="pp.png" alt="">
+        </div>
+
+        <div class="haif-width">
+            <h1><span class="pink-color">About</span> Me</h1>
+
+            <p>
+                I am kajol and working children.If you want i will tell you in my corse how can you you keep your
+                children
+                safe if you’re on a budget?
+
+
+            </p>
+            <a href="" target="_blank">Contact Me</a>
+        </div>
+    </section>
+    <section class="My recipies">
+        <h1>
+            My recipies
+        </h1>
+        <p>
+            Here is description some foods recip</p>
+    </section>
+
+    <section>
+        <div>
+            <h1>
+                <img src="fruits.jpg" alt="">
+                <h1> Fruits Salad Recipe</h1>
+                <h6>Ingredients</h6>
+                <p>
+                <ol>
+                    <li> Cup of Strawberries.</li>
+                    <li> cup of raspberries fresh </li>frozen.
+                    <li> cup of grapes.</li>
+                    <li> cup of diced apples.</li>
+                    <li> cup of sliced bananas.</li>
+                    <li>1/2 cup of yogurt strawberry or vanilla.</li>
+                    <li>1/2 cup of cool whip or whip your own cream.</li>
+                </ol>
+
+                </p>
+
+        </div>
+        <div>
+            <img src="hillisa fish.jpg" alt="">
+
+            <h1> Hilsa Curry Recipe</h1>
+            <h6>Ingredients </h6>
+            <p>
+            <ol>
+                <li>500 gm washed & dried,sliced Hilsa fish.
+                </li>
+                <li>
+                    1 teaspoon black cumin seeds</li>
+                <li>4 green chilli <.li <li> 2 cup boiled water</li>
+                <li> pinches salt</li>
+                <li> 1/2 cup mustard oil </li>
+                1 teaspoon powdered turmeric</li>
+            </ol>
+            </p>
+        </div>
+
+        <div>
+            <img src="v.webp" alt="">
+            <h1>Vegetable juice</h1>
+            <h6>Ingredients</h6>
+            <p>
+            <ol>
+                <li>
+                    5 pounds ripe tomatoes, peeled and chopped.</li>
+                <li> 1/2 cup water.</li>
+                <li> 1/4 cup chopped green pepper.</li>
+                <li> 1/4 cup chopped carrot.</li>
+                <li> 1/4 cup chopped celery.</li>
+                <li>1/4 cup lemon juice.</li>
+                <li> 2 tablespoons chopped onion.</li>
+                <li> 1 tablespoon salt.</li>
+
+                </li>
+            </ol>
+            </p>
+
+        </div>
+    </section>
+    <section>
+        <div class="haif-width">
+
+            <h2>
+                700k
+            </h2>
+            <h4>Youtube Subscribers</h4>
+        </div>
+        <div class="haif-width">
+            <h2>2.4m</h2>
+            <h4>Instagram Followers</h4>
+        </div>
+        <div class="haif-width">
+            <h2>100k</h2>
+            <h4>Dribbble Shot Likes</h4>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <h1> MY <span class="food"> FOOD</span> BLOG</h1>
+        <p class="footer-again"> Eat healthy to live healthy. Live healthy to live happy.</p>
+
+    </footer>
+
 </body>
 
 </html>
