--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
             <a href="" target="_blank">Contact Me</a>
         </div>
     </section>
-    <section class="My recipies">
-        <h1>
-            My recipies
-        </h1>
+    <section class="my-recipies">
+        <h1>My Recipies</h1>
         <p>
-            Here is description some foods recip</p>
+            When you're in the mood to grill ribs,
+            <br>
+            you're most likely looking for a magically meaty experience—and trust
+            <br>
+            us, there's a reason we call these the best .
+        </p>
     </section>
-
     <section>
-        <div>
+        <div class="shadow">
             <h1>
-                <img src="fruits.jpg" alt="">
+                <img class="image" src="fruits.jpg" alt="">
                 <h1> Fruits Salad Recipe</h1>
                 <h6>Ingredients</h6>
                 <p>
@@ -69,16 +71,14 @@
                     <li> cup of raspberries fresh </li>frozen.
                     <li> cup of grapes.</li>
                     <li> cup of diced apples.</li>
-                    <li> cup of sliced bananas.</li>
-                    <li>1/2 cup of yogurt strawberry or vanilla.</li>
-                    <li>1/2 cup of cool whip or whip your own cream.</li>
+
                 </ol>
 
                 </p>
 
         </div>
-        <div>
-            <img src="hillisa fish.jpg" alt="">
+        <div class="shadow">
+            <img class="image" src="hillisa fish.jpg" alt="">
 
             <h1> Hilsa Curry Recipe</h1>
             <h6>Ingredients </h6>
@@ -89,15 +89,13 @@
                 <li>
                     1 teaspoon black cumin seeds</li>
                 <li>4 green chilli <.li <li> 2 cup boiled water</li>
-                <li> pinches salt</li>
-                <li> 1/2 cup mustard oil </li>
-                1 teaspoon powdered turmeric</li>
+
             </ol>
             </p>
         </div>
 
-        <div>
-            <img src="v.webp" alt="">
+        <div class="shadow">
+            <img class="image" src="v.webp" alt="">
             <h1>Vegetable juice</h1>
             <h6>Ingredients</h6>
             <p>
@@ -108,9 +106,7 @@
                 <li> 1/4 cup chopped green pepper.</li>
                 <li> 1/4 cup chopped carrot.</li>
                 <li> 1/4 cup chopped celery.</li>
-                <li>1/4 cup lemon juice.</li>
-                <li> 2 tablespoons chopped onion.</li>
-                <li> 1 tablespoon salt.</li>
+
 
                 </li>
             </ol>
