--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> My-food-blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Math&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,7 +17,8 @@
 
     <section class="top-banner">
 
-        <div class="haif-width">
+        <div class="half-width">
+
             <h1><span class="pink-color">Healthy Food</span> for Kids</h1>
             <p>Are your kids hooked on junk food?<br> With these simple tips, you can get children to eat right without
                 turning
@@ -25,22 +26,22 @@
             <a link button target="_blank" href="">Order Food</a>
         </div>
 
-        <div class="haif-width">
+        <div class="half-width">
             <img src="1.png" alt="">
         </div>
 
     </section>
 
     <section class="About-Me">
-        <div class="haif-width">
+        <div class="half-width">
             <img src="pp.png" alt="">
         </div>
 
-        <div class="haif-width">
+        <div class="half-width">
             <h1><span class="pink-color">About</span> Me</h1>
 
             <p>
-                I am kajol and working children.If you want i will tell you in my corse how can you you keep your
+                I am kajol and working with children.If you want i will tell you in my course how can you you keep your
                 children
                 safe if you’re on a budget?
 
@@ -88,7 +89,8 @@
                 </li>
                 <li>
                     1 teaspoon black cumin seeds</li>
-                <li>4 green chilli <.li <li> 2 cup boiled water</li>
+                <li>4 green chilli </li>
+                <li> 2 cup boiled water</li>
 
             </ol>
             </p>
@@ -114,23 +116,43 @@
 
         </div>
     </section>
-    <section>
-        <div class="haif-width">
+
+    <section class="Subscribers">
+        <div class="half-width">
+
+
 
             <h2>
                 700k
             </h2>
             <h4>Youtube Subscribers</h4>
         </div>
-        <div class="haif-width">
+        <div class="half-width">
             <h2>2.4m</h2>
             <h4>Instagram Followers</h4>
         </div>
-        <div class="haif-width">
+        <div class="half-width">
             <h2>100k</h2>
             <h4>Dribbble Shot Likes</h4>
         </div>
     </section>
+
+    <section>
+        <div class="half-width">
+            <h1>Contact With Facebook</h1>
+            <a href="" target="_blank">Facebook link</a>
+        </div>
+        <div class="half-width">
+            <h1>Contact With Linkedin</h1>
+            <a href="" target="_blank">Linkedin link</a>
+        </div>
+    </section>
+
+
+
+
+
+
 
 
     <footer class="footer">
